# ZeroFS

./: Makefile  README.md
.github/: .pjdfstest-fuse-exclude  .pjdfstest-nfs-exclude
.github/workflows/: cross-compile.yml  kernel-compile-9p.yml  kernel-compile-fuse.yml  kernel-compile-nfs.yml  pjdfstest-9p.yml  pjdfstest-fuse.yml  pjdfstest.yml  release-pgo.yml  stress-ng.yml  webui.yml  xfstests-9p.yml  xfstests-fuse.yml  xfstests-nfs.yml  zfs-test.yml
bench/: Cargo.toml
documentation/: next.config.mjs
documentation/src/app/9p-access/: page.mdx
documentation/src/app/configuration/: page.mdx
documentation/src/app/durability/: page.mdx
documentation/src/app/encryption/: page.mdx
documentation/src/app/postgresql-in-the-browser/: page.mdx
documentation/src/app/prometheus/: page.mdx
documentation/src/app/quickstart/: page.mdx
documentation/src/app/separate-wal/: page.mdx
documentation/src/app/standalone-compactor/: page.mdx
documentation/src/app/telemetry/: page.mdx
documentation/src/app/web-ui/: page.mdx
documentation/src/components/: Navigation.tsx
website/: index.html  vercel.json
website/social/: card.html
webui/: .gitignore  buf.gen.yaml  index.html  package-lock.json  package.json  vite.config.ts
webui/scripts/: build-vm-image.sh  vm-init.sh
webui/src/: App.tsx  index.css  main.tsx
webui/src/components/dashboard/: FileAccessTracer.tsx  GCStats.tsx  IOChart.tsx  IOPSChart.tsx  OperationCounters.tsx  StatCard.tsx
webui/src/components/file-manager/: Breadcrumb.tsx  Checkbox.tsx  ConfirmDialogs.tsx  FileBrowser.tsx  FileContextMenu.tsx  FileIcon.tsx  FileManager.tsx  FilePreview.tsx  FileProperties.tsx  HexViewer.tsx  InlineInput.tsx  PDFViewer.tsx  SearchBar.tsx  Toolbar.tsx  UploadZone.tsx  context-actions.ts  dialog-classes.ts
webui/src/components/file-manager/hooks/: use-drag-drop.ts  use-keyboard-nav.ts  use-preview-panel.ts  use-uploads.ts
webui/src/components/layout/: Layout.tsx
webui/src/components/terminal/: WebTerminal.tsx
webui/src/components/transfers/: TransferContext.ts  TransferPanel.tsx  use-file-transfers.ts
webui/src/components/ui/: Button.tsx  Tip.tsx
webui/src/hooks/: use-frozen.ts  use-ninep-connection.ts  use-ninep.ts  use-presence.ts  use-resize-observer.ts  use-stats.ts  use-title.ts
webui/src/lib/: async.ts  errors.ts  folder-upload.ts  format.ts  monaco.ts
webui/src/lib/grpc/: client.ts
webui/src/lib/ninep/: client.ts  protocol.ts  types.ts
webui/src/pages/: dashboard.tsx  files.tsx  terminal.tsx
zerofs/: Cargo.toml  Cross.toml
zerofs/.cargo/: config.toml
zerofs/ninep-client/: Cargo.toml
zerofs/ninep-client/src/: lib.rs
zerofs/ninep-proto/: Cargo.toml
zerofs/ninep-proto/src/: deku_bytes.rs  lib.rs  protocol.rs
zerofs/proto/: admin.proto
zerofs/src/: block_transformer.rs  checkpoint_manager.rs  config.rs  db.rs  key_management.rs  length_checked_object_store.rs  lib.rs  main.rs  mount.rs  nfs.rs  object_store_prefetch.rs  parse_object_store.rs  posix_tests.rs  prometheus.rs  segment_extractor.rs  storage_class_object_store.rs  task.rs  telemetry.rs  webui.rs
zerofs/src/cli/: compactor.rs  debug.rs  mod.rs  monitor.rs  password.rs  server.rs
zerofs/src/fs/: filter_policy.rs  gc.rs  key_codec.rs  mod.rs  stats.rs  tracing.rs  write_coordinator.rs
zerofs/src/fs/store/: chunk.rs  directory.rs  inode.rs  tombstone.rs
zerofs/src/nbd/: handler.rs  server.rs
zerofs/src/ninep/: handler.rs  lock_manager.rs  mod.rs  server.rs
zerofs/src/rpc/: client.rs  convert.rs  server.rs
zerofs/tests/failpoints/: consistency.rs  mod.rs
