[package]
name = "zerofs"
version = "1.0.9"
edition = "2024"
description = "A high-performance filesystem that makes S3 your primary storage with NFS, 9P, and NBD support"
license = "AGPL-3.0"
repository = "https://github.com/Barre/ZeroFS"
homepage = "https://www.zerofs.net"
documentation = "https://www.zerofs.net"
readme = "../README.md"
keywords = ["filesystem", "s3", "nfs", "distributed", "storage"]
categories = ["filesystem", "network-programming"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16

[features]
default = ["vendored-protoc"]
tokio-console = ["dep:console-subscriber"]
failpoints = ["dep:fail"]
vendored-protoc = ["dep:protobuf-src"]
webui = ["dep:rust-embed", "dep:axum", "dep:tonic-web", "dep:tower-http"]

[dependencies]
reqwest = { version = "0.12", default-features = false }
console-subscriber = { version = "0.5", optional = true }
slatedb = { git = "https://github.com/Barre/slatedb.git", rev = "ac472bfbfb1c276586b7692ef6b946841942d5c6", features = [
    "wal_disable",
] }
fastant = "0.1.11"
foyer-memory = "0.22"
zerofs_nfsserve = "0.19.1"
mimalloc = { version = "0.1", features = ["v3"] }
tokio = { version = "1.49", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object_store = { version = "=0.12.4", features = ["aws", "azure", "gcp"] }
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
futures = "0.3"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
lz4_flex = "0.12"
zstd = "0.13"
anyhow = "1.0"
arc-swap = "1.7"
argon2 = "0.5"
url = "2.5"
deku = "0.20"
thiserror = "2.0"
comfy-table = "7.1"
num-format = "0.4"
libc = "0.2"
dashmap = "6.1"
uuid = { version = "1.17", features = ["v4"] }
toml = "0.9"
shellexpand = "3.1"
clap = { version = "4.5", features = ["derive"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
chrono = "0.4"
fail = { version = "0.5", features = ["failpoints"], optional = true }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
serde_json = "1.0"
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
rust-embed = { version = "8", optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
tonic-web = { version = "0.13", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[patch.crates-io]
object_store = { git = "https://github.com/Barre/arrow-rs-object-store", rev = "01b0349f126c9eda8e7ad8767c7e4868debe3602" }

[build-dependencies]
tonic-prost-build = "0.14"
protobuf-src = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.21"
futures = "0.3"

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["failpoints"]
