[package]
name = "ninep-client"
version = "0.1.0"
edition = "2024"
description = "Async 9P2000.L client with transparent reconnection"
license = "AGPL-3.0"
repository = "https://github.com/Barre/ZeroFS"

[dependencies]
ninep-proto = { path = "../ninep-proto" }
tokio = { version = "1.52", features = ["rt", "net", "io-util", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
dashmap = "6.2"
arc-swap = "1.9"
socket2 = { version = "0.6", features = ["all"] }
deku = "0.20"
bytes = "1.11"
libc = "0.2"
tracing = "0.1"
